sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:14: error: illegal start of simple expression
              }
              ^AlgBubbleSort2:15: error: 'while' expected but '}' found.
                  }
                  ^